# html-cleaner

./: Makefile  README.md  pyproject.toml
html_cleaner/: cleaner.py
html_scrubber/: __init__.py  cleaner.py
tests/: test_cleaner.py
